--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 
     <style>
         p{
-            font-family: "Open Sans", Helvetica, Arial, sans-serif;
+            font-family: 'Open Sans', Helvetica, Arial, sans-serif;
             font-size: 1em;
         }
         h2{
-            font-family: "Vollkorn",Georgia,serif;
+            font-family: 'Vollkorn',Georgia,serif;
             font-size: 1.75em;
             margin-bottom: 0em;
             color: #333333;
             color: #9d1e1e;
         }
         h3{
-            font-family: "Open Sans",Helvetica, Arial,sans-serif;
+            font-family: 'Open Sans',Helvetica, Arial,sans-serif;
             font-weight:700;
             font-size:1.5em;
             color: #333333;
@@ -66,7 +66,7 @@
             <table cellspacing="0" cellpadding="0" width="90%" height="5em" bgcolor="#d9d8d7" style="border:none;padding:1em;">
                 <tr>
                 <td valign="bottom" align="right" style="font-family:Open Sans, Arial, sans-serif;font-size:.7em;">
-                <a href="https://www.dropbox.com/s/4gqigap9xt9beqi/BoweryNewsletter.html?dl=0" target="_blank">View in Browser</a>
+                <a href="https://austincchin.github.io/bowery/index.html" target="_blank">View in Browser</a>
                 </td>
                 </tr>
             </table>
@@ -77,7 +77,7 @@
                     <!-- Title Div -->
                         <table cellspacing="0" cellpadding="0" width="100%" bgcolor="#fafafa" align="center" style="border:none">
                             <tr>
-                                <td valign="middle" align="center" style="padding:1.5em;">                                <img src="https://gallery.mailchimp.com/741bd59c6d574ae2971229045/images/54797cca-7c72-4d9d-8ca2-b92abb325529.png" alt="The Bowery Mission" width="60%" style="max-width:80%;margin:1em;font-family: " vollkorn",georgia,serif;font-size:4em;">
+                                <td valign="middle" align="center" style="padding:1.5em;">                                <img src="https://gallery.mailchimp.com/741bd59c6d574ae2971229045/images/54797cca-7c72-4d9d-8ca2-b92abb325529.png" alt="The Bowery Mission" width="60%" style="max-width:80%;margin:1em;font-family: 'Vollkorn',Georgia,serif;font-size:30px;">
                                 </td>
                             </tr>
                         </table>
@@ -87,12 +87,12 @@
                         <table cellspacing="0" cellpadding="0" width="100%" bgcolor="#fafafa" style="border:none">
                             <tr>
                                 <td style="padding:1em;padding-top:0px;">
-                                    <p>Thank you for your continued support of the Bowery Mission -We wanted to give you an update on our latest news and endeavors!</p>
-                                    <h2 style="font-family: "Vollkorn",Georgia,serif;font-size: 1.75em;margin-bottom: 0em;color: #9d1e1e;" vollkorn",georgia,serif;font-size: 1.75em;margin-bottom: 0em;color: #333333;">What's New?</h2>
-                                    <h3 style="font-family: "Open Sans",Helvetica, Arial,sans-serif;font-weight: 700;font-size: 1.5em;color: #333333;" open sans",arial,sans-serif;font-weight: 700;font-size: 1.5em;color: #333333;">We just completed a successful summer at Mont Lawn Summer Camp!</h3>
+                                    <p>Thank you for your continued support of the Bowery Mission - we wanted to give you an update on our latest news and endeavors!</p>
+                                    <h2 style="font-family: 'Vollkorn',Georgia,serif; font-size: 1.75em; margin-bottom: 0em;color: #9d1e1e;">What's New?</h2>
+                                    <h3 style="font-family: 'Open Sans',Helvetica, Arial,sans-serif;font-weight: 700;font-size: 1.5em;color: #333333;'Open Sans',arial,sans-serif;font-weight: 700;font-size: 1.5em;color: #333333;">We just completed a successful summer at Mont Lawn Summer Camp!</h3>
                                     <img src="https://cdn-images-1.medium.com/max/1000/1*RpvmiFlLvd0SQoibMozNxQ.jpeg" width="50%" style="vertical-align:bottom"><img src="https://cdn-images-1.medium.com/max/1250/1*ejn9WA3SLy_-kQTbOt7kDg.jpeg" width="50%" style="vertical-align:bottom">
                                     <img src="https://cdn-images-1.medium.com/max/750/1*sM_3bzChLPMf9e-mtRm4Ew.jpeg" width="100%">
-                                    <p style="font-family: "Open Sans", Helvetica, Arial, sans-serif;font-size: 1em;" open sans", helvetica, arial, sans-serif;font-size: 1em;">Children from struggling families and tough neighborhoods created exciting memories & relationships that will last a lifetime. Besides the fun parts of camp (such as rock climbing, archery, and swimming!), many campers have grown to make better choices in life. Sometimes being with other children for an entire week can create conflict, but it is also a learning opportunity for kids to practice self-control, patience and communication skills — small steps that make a big impact.</p>
+                                    <p style="font-family: 'Open Sans', Helvetica, Arial, sans-serif;font-size: 1em;'Open Sans', Helvetica, arial, sans-serif;font-size: 1em;">Children from struggling families and tough neighborhoods created exciting memories & relationships that will last a lifetime. Besides the fun parts of camp (such as rock climbing, archery, and swimming!), many campers have grown to make better choices in life. Sometimes being with other children for an entire week can create conflict, but it is also a learning opportunity for kids to practice self-control, patience and communication skills — small steps that make a big impact.</p>
                                 </td>
                             </tr>
 
@@ -102,14 +102,14 @@
                             </tr>
                             <tr>
                                 <td style="padding:1em;">
-                                    <h3 align="center" style="font-family: "Open Sans",Helvetica, Arial,sans-serif;font-weight: 700;font-size: 1.5em;color: #333333;" open sans",arial,sans-serif;font-weight: 700;font-size: 1.5em;color: #333333;">Amari, Mont Lawn '14</h3>
-                                    <p style="font-family: "Open Sans", Helvetica, Arial, sans-serif;font-size: 1em;" open sans", helvetica, arial, sans-serif;font-size: 1em;" >"I used to think that you have to fight to get what you want," Amari says. Living in a tough neigborhood, Amani grew up constantly on guard, ready to jump to violence. </p>
+                                    <h3 align="center" style="font-family: 'Open Sans',Helvetica, Arial,sans-serif;font-weight: 700;font-size: 1.5em;color: #333333;'Open Sans',arial,sans-serif;font-weight: 700;font-size: 1.5em;color: #333333;">Amari, Mont Lawn '14</h3>
+                                    <p style="font-family: 'Open Sans', Helvetica, Arial, sans-serif;font-size: 1em;'Open Sans', Helvetica, arial, sans-serif;font-size: 1em;" >"I used to think that you have to fight to get what you want," Amari says. Living in a tough neigborhood, Amani grew up constantly on guard, ready to jump to violence. </p>
 
-                                    <p style="font-family: "Open Sans", Helvetica, Arial, sans-serif;font-size: 1em;" open sans", helvetica, arial, sans-serif;font-size: 1em;" >Then he heard about Mont Lawn Camp and spent a week there in the summer. He loved the adventures - swimming, canoeing, sleeping in a tent, playing soccer and football with his friends. But more than that, he learned a different way to live. The counselors listened to him and understood him. "They taught me about being a leader and how to speak up for others," he said.</p>
+                                    <p style="font-family: 'Open Sans', Helvetica, Arial, sans-serif;font-size: 1em;'Open Sans', Helvetica, arial, sans-serif;font-size: 1em;" >Then he heard about Mont Lawn Camp and spent a week there in the summer. He loved the adventures - swimming, canoeing, sleeping in a tent, playing soccer and football with his friends. But more than that, he learned a different way to live. The counselors listened to him and understood him. "They taught me about being a leader and how to speak up for others," he said.</p>
 
-                                    <p style="font-family: "Open Sans", Helvetica, Arial, sans-serif;font-size: 1em;" open sans", helvetica, arial, sans-serif;font-size: 1em;">"Going to Mont Lawn Camp has taught me that violence is not the best answer. Intead of risking my life in a fight, I know I am strong enough to walk away." Amari now goes to our City Camp every week during the school year and has friends who support and encourage him. He wants to get a college degree and open his own business. "A lot of people from camp believe in me, so I know I can do it."</p>
+                                    <p style="font-family: 'Open Sans', Helvetica, Arial, sans-serif;font-size: 1em;'Open Sans', Helvetica, arial, sans-serif;font-size: 1em;">"Going to Mont Lawn Camp has taught me that violence is not the best answer. Intead of risking my life in a fight, I know I am strong enough to walk away." Amari now goes to our City Camp every week during the school year and has friends who support and encourage him. He wants to get a college degree and open his own business. "A lot of people from camp believe in me, so I know I can do it."</p>
 
-                                     <p style="font-family: "Open Sans", Helvetica, Arial, sans-serif;font-size: 1em;" open sans", helvetica, arial, sans-serif;font-size: 1em;">Learn more about Mont Lawn Summer Camp's impact on children in this <a href="https://medium.com/@BoweryMission/changing-the-lives-of-children-in-nyc-2c8e15aa4a5a" target="_blank" style="color: #9d1e1e;">Q&A with our fantastic staff!</a></p>
+                                     <p style="font-family: 'Open Sans', Helvetica, Arial, sans-serif;font-size: 1em;'Open Sans', Helvetica, arial, sans-serif;font-size: 1em;">Learn more about Mont Lawn Summer Camp's impact on children in this <a href="https://medium.com/@BoweryMission/changing-the-lives-of-children-in-nyc-2c8e15aa4a5a" target="_blank" style="color: #9d1e1e;">Q&A with our fantastic staff!</a></p>
                                      <img src="https://cdn-images-1.medium.com/max/1500/1*Yj4On2Bcrpln7WYlv-h5ag.jpeg" width="50%"><img src="https://cdn-images-1.medium.com/max/1500/1*l81dcXFs5nhMZCRM2cEPSQ.jpeg" width="50%">
                                 </td>
                             </tr>
@@ -119,17 +119,17 @@
                         <table cellspacing="0" cellpadding="0" width="100%" bgcolor="#fafafa" style="border:none">
                             <tr>
                                 <td style="padding:1em;">
-                                    <h2 style="font-family: "Vollkorn",Georgia,serif;font-size: 1.75em;margin-bottom: 0em;color: #9d1e1e;" vollkorn",georgia,serif;font-size: 1.75em;margin-bottom: 0em;color: #333333;">How Can You Help?</h2>
-                                    <h3 style="font-family: "Open Sans",Helvetica, Arial,sans-serif;font-weight: 700;font-size: 1.5em;color: #333333;" open sans",arial,sans-serif;font-weight: 700;font-size: 1.5em;color: #333333;">Volunteer</h3>
-                                    <p style="font-family: "Open Sans", Helvetica, Arial, sans-serif;font-size: 1em;" open sans", helvetica, arial, sans-serif;font-size: 1em;">In even a short time of service, our volunteers touch hearts and help change lives. And volunteers say their hearts have been touched, as well. You may never know the impact you have as a volunteer, but we believe what Jesus said in Matthew 25: <span style="font-style: oblique;"><i>"Whatever you did for the least of these brothers of mine, you did for me."</i></span></p>
+                                    <h2 style="font-family: 'Vollkorn',Georgia,serif; font-size: 1.75em; margin-bottom: 0em;color: #9d1e1e;">How Can You Help?</h2>
+                                    <h3 style="font-family: 'Open Sans',Helvetica, Arial,sans-serif;font-weight: 700;font-size: 1.5em;color: #333333;'Open Sans',arial,sans-serif;font-weight: 700;font-size: 1.5em;color: #333333;">Volunteer</h3>
+                                    <p style="font-family: 'Open Sans', Helvetica, Arial, sans-serif;font-size: 1em;'Open Sans', Helvetica, arial, sans-serif;font-size: 1em;">In even a short time of service, our volunteers touch hearts and help change lives. And volunteers say their hearts have been touched, as well. You may never know the impact you have as a volunteer, but we believe what Jesus said in Matthew 25: <span style="font-style: oblique;"><i>"Whatever you did for the least of these brothers of mine, you did for me."</i></span></p>
 
-                                    <p style="font-family: "Open Sans", Helvetica, Arial, sans-serif;font-size: 1em;" open sans", helvetica, arial, sans-serif;font-size: 1em;">Click to learn more information on <a href="https://www.bowery.org/volunteer/individual-volunteer/" target="_blank" style="color: #9d1e1e;">Individual Volunteer Opportunities</a>, <a href="https://www.bowery.org/volunteer/volunteer-groups/" target="_blank" style="color: #9d1e1e;">Group Volunteer Opportunities</a> and <a href="https://www.bowery.org/volunteer/church-groups-volunteer/" target="_blank" style="color: #9d1e1e;">Church Group Opportunities</a>.</p>
+                                    <p style="font-family: 'Open Sans', Helvetica, Arial, sans-serif;font-size: 1em;'Open Sans', Helvetica, arial, sans-serif;font-size: 1em;">Click to learn more information on <a href="https://www.bowery.org/volunteer/individual-volunteer/" target="_blank" style="color: #9d1e1e;">Individual Volunteer Opportunities</a>, <a href="https://www.bowery.org/volunteer/volunteer-groups/" target="_blank" style="color: #9d1e1e;">Group Volunteer Opportunities</a> and <a href="https://www.bowery.org/volunteer/church-groups-volunteer/" target="_blank" style="color: #9d1e1e;">Church Group Opportunities</a>.</p>
                                   
 
-                                    <h3 style="font-family: "Open Sans",Helvetica, Arial,sans-serif;font-weight: 700;font-size: 1.5em;color: #333333;" open sans",arial,sans-serif;font-weight: 700;font-size: 1.5em;color: #333333;">Donations</h3>
-                                    <p style="font-family: "Open Sans", Helvetica, Arial, sans-serif;font-size: 1em;" open sans", helvetica, arial, sans-serif;font-size: 1em;">Your donations to The Bowery Mission, Mont Lawn Camp and Mont Lawn City Camp help transform lives! It is only through the generous financial contributions and donated goods and services that it is possible to share God’s love and provide help and hope to the homeless and poor in New York City.</p>
+                                    <h3 style="font-family: 'Open Sans',Helvetica, Arial,sans-serif;font-weight: 700;font-size: 1.5em;color: #333333;'Open Sans',arial,sans-serif;font-weight: 700;font-size: 1.5em;color: #333333;">Donations</h3>
+                                    <p style="font-family: 'Open Sans', Helvetica, Arial, sans-serif;font-size: 1em;'Open Sans', Helvetica, arial, sans-serif;font-size: 1em;">Your donations to The Bowery Mission, Mont Lawn Camp and Mont Lawn City Camp help transform lives! It is only through the generous financial contributions and donated goods and services that it is possible to share God’s love and provide help and hope to the homeless and poor in New York City.</p>
 
-                                    <p style="font-family: "Open Sans", Helvetica, Arial, sans-serif;font-size: 1em;"><a href="https://www.bowery.org/donate/" target="_blank" style="color: #9d1e1e;">Find out more information on Donation Opportunities</a></p>
+                                    <p style="font-family: 'Open Sans', Helvetica, Arial, sans-serif;font-size: 1em;"><a href="https://www.bowery.org/donate/" target="_blank" style="color: #9d1e1e;">Find out more information on Donation Opportunities</a></p>
 
 
 
@@ -162,14 +162,14 @@
 
                 <br>
                 <hr noshade style="border-style: solid;border-width: 1px;margin-top: 0;">
-                <p style="font-family: "Open Sans", Helvetica, Arial, sans-serif;font-size: 1em;" open sans", helvetica, arial, sans-serif;font-size: 1em;">The Bowery Mission, Mont Lawn Camp & Retreat Center, and Heartsease Home are part of Christian Herald Association,<br>
+                <p style="font-family: 'Open Sans', Helvetica, Arial, sans-serif;font-size: 1em;'Open Sans', Helvetica, arial, sans-serif;font-size: 1em;">The Bowery Mission, Mont Lawn Camp & Retreat Center, and Heartsease Home are part of Christian Herald Association,<br>
                  a 501(c)(3) tax-exempt, nonprofit organization. </p>
 
-                <p style="font-family: "Open Sans", Helvetica, Arial, sans-serif;font-size: 1em;" open sans", helvetica, arial, sans-serif;font-size: 1em;">432 Park Avenue South • New York, NY 10016 </p>
+                <p style="font-family: 'Open Sans', Helvetica, Arial, sans-serif;font-size: 1em;'Open Sans', Helvetica, arial, sans-serif;font-size: 1em;">432 Park Avenue South • New York, NY 10016 </p>
 
                 You received this message because you signed up for email updates from The Bowery Mission.
-                <p style="font-family: "Open Sans", Helvetica, Arial, sans-serif;font-size: 1em;" open sans", helvetica, arial, sans-serif;font-size: 1em;">Add email@bowery.org to your Address Book to ensure receiving our newsletters!</p>
-                <p style="font-family: "Open Sans", Helvetica, Arial, sans-serif;font-size: 1em;" open sans", helvetica, arial, sans-serif;font-size: 1em;">
+                <p style="font-family: 'Open Sans', Helvetica, Arial, sans-serif;font-size: 1em;'Open Sans', Helvetica, arial, sans-serif;font-size: 1em;">Add email@bowery.org to your Address Book to ensure receiving our newsletters!</p>
+                <p style="font-family: 'Open Sans', Helvetica, Arial, sans-serif;font-size: 1em;'Open Sans', Helvetica, arial, sans-serif;font-size: 1em;">
                     <span style="padding: 1em;"><a href="#" style="color: #9d1e1e;">Unsubscribe</a></span>
                     <span style="padding: 1em;"><a href="#" style="color: #9d1e1e;">Manage your email preferences</a></span>
                 </p>
